--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>GNC</title>
     <meta name="description" content="gnc"/>
     <link rel="canonical" href="https://gnc.ge/">
+    <meta name="keywords" content="GNC, gnc"/>
+    <meta name="robots" content="noindex, nofollow"/>
+    <meta property="og:type" content="type"/>
+    <meta property="og:title" content="title"/>
+    <meta property="og:description" content="description"/>
+    <meta property="og:image" content="./src/assets/Images/image.png"/>
+    <meta property="og:link" content="https://gnc.ge/"/>
   </head>
   <body>
     <div id="root"></div>
