--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GNC</title>
     <meta name="description" content="gnc"/>
+    <link rel="canonical" href="https://www.gnc.ge/">
     <link rel="canonical" href="https://gnc.ge/">
     <meta name="keywords" content="GNC, gnc"/>
     <meta name="robots" content="noindex, nofollow"/>
@@ -13,6 +14,7 @@
     <meta property="og:title" content="title"/>
     <meta property="og:description" content="description"/>
     <meta property="og:image" content="./src/assets/Images/image.png"/>
+    <meta property="og:link" content="https://www.gnc.ge/"/>
     <meta property="og:link" content="https://gnc.ge/"/>
   </head>
   <body>
