--- a/index.html
+++ b/index.html
@@ -2,21 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/Images/image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GNC</title>
-    <meta name="description" content="gnc"/>
-    <link rel="canonical" href="https://gnc.ge/">
-    <meta name="keywords" content="GNC, gnc"/>
-    <meta name="robots" content="noindex, nofollow"/>
-    <meta property="og:type" content="type"/>
-    <meta property="og:title" content="title"/>
-    <meta property="og:description" content="description"/>
-    <meta property="og:image" content="./src/assets/Images/image.png"/>
-    <meta property="og:link" content="https://gnc.ge/"/>
+    <meta name="description" content="GNC - Your go-to site for all things GNC"/>
+    <link rel="canonical" href="https://www.gnc.ge/">
+    <meta name="keywords" content="GNC, health, wellness, supplements"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="GNC - Health and Wellness"/>
+    <meta property="og:description" content="Explore GNC for the best in health and wellness products."/>
+    <meta property="og:image" content="/src/assets/Images/image.png"/>
+    <meta property="og:url" content="https://www.gnc.ge/"/>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "GNC",
+      "url": "https://www.gnc.ge",
+      "logo": "https://www.gnc.ge/src/assets/Images/image.png",
+      "sameAs": [
+        "https://www.facebook.com/your-profile",
+        "https://www.twitter.com/your-profile",
+        "https://www.instagram.com/your-profile"
+      ]
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
+
