--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/Images/image.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/Images/gnc-logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GNC</title>
     <meta name="description" content="GNC - Your go-to site for all things GNC"/>
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="GNC - Health and Wellness"/>
     <meta property="og:description" content="Explore GNC for the best in health and wellness products."/>
-    <meta property="og:image" content="/src/assets/Images/image.png"/>
+    <meta property="og:image" content="/src/assets/Images/gnc-logo.jpg"/>
     <meta property="og:url" content="https://www.gnc.ge/"/>
     <script type="application/ld+json">
     {
