--- a/index.html
+++ b/index.html
@@ -2,24 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/Images/gnc-logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GNC</title>
-    <meta name="description" content="GNC - Your go-to site for all things GNC"/>
-    <link rel="canonical" href="https://www.gnc.ge/">
-    <meta name="keywords" content="GNC, health, wellness, supplements"/>
+    <title>Geo-Natural Consulting - Environmental Protection and Safety</title>
+  
+    <meta name="description" content="Geo-Natural Consulting specializes in environmental protection and safety. We collaborate with public and private sectors to provide comprehensive consulting services.">
+    <meta name="keywords" content="environmental protection, safety, consulting, Geo-Natural Consulting, public sector, private sector">
+  
+    <link rel="icon" type="image/png" href="https://www.gnc.ge/src/assets/Images/gnc-logo.jpg" />
+    <link rel="canonical" href="https://www.gnc.ge/" />
+  
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content="GNC - Health and Wellness"/>
-    <meta property="og:description" content="Explore GNC for the best in health and wellness products."/>
-    <meta property="og:image" content="/src/assets/Images/gnc-logo.jpg"/>
+    <meta property="og:title" content="Geo-Natural Consulting - Environmental Protection and Safety"/>
+    <meta property="og:description" content="Geo-Natural Consulting specializes in environmental protection and safety. We collaborate with public and private sectors to provide comprehensive consulting services."/>
+    <meta property="og:image" content="https://www.gnc.ge/src/assets/Images/gnc-logo.jpg"/>
     <meta property="og:url" content="https://www.gnc.ge/"/>
+  
+    <meta name="google-site-verification" content="lsphyzkdPj0oGiCJHM3_g_lEct8vIczwhtPH-o-Y_EY"/>
+  
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "name": "GNC",
+      "name": "Geo-Natural Consulting",
       "url": "https://www.gnc.ge",
-      "logo": "https://www.gnc.ge/src/assets/Images/image.png",
+      "logo": "https://www.gnc.ge/src/assets/Images/gnc-logo.jpg",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "email": "info@gnc.ge",
+        "contactType": "Customer Service"
+      },
       "sameAs": [
         "https://www.facebook.com/your-profile",
         "https://www.twitter.com/your-profile",
